[gd_scene load_steps=11 format=3 uid="uid://dmt4yppqs0hbc"]

[ext_resource type="Script" path="res://addons/sprite_sheet/scene/component/preview_handle/preview_handle.gd" id="1_2u6a4"]
[ext_resource type="PackedScene" path="res://addons/sprite_sheet/scene/component/common/item_vector2/item_vector2.tscn" id="2_q47wk"]
[ext_resource type="PackedScene" path="res://addons/sprite_sheet/scene/component/common/item_rect2/item_rect2.tscn" id="3_4s4o5"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_nyxa8"]
bg_color = Color(1, 1, 1, 0.392157)
corner_radius_top_left = 1
corner_radius_top_right = 1
corner_radius_bottom_right = 1
corner_radius_bottom_left = 1

[sub_resource type="ButtonGroup" id="ButtonGroup_naus0"]

[sub_resource type="Image" id="Image_rjo17"]
data = {
"data": PackedByteArray(255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 1, 225, 225, 225, 158, 227, 227, 227, 9, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 224, 224, 224, 255, 224, 224, 224, 211, 224, 224, 224, 40, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 227, 227, 227, 63, 224, 224, 224, 181, 224, 224, 224, 231, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 244, 225, 225, 225, 93, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 225, 225, 225, 127, 224, 224, 224, 254, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 244, 225, 225, 225, 92, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 224, 224, 224, 64, 224, 224, 224, 254, 224, 224, 224, 249, 225, 225, 225, 118, 224, 224, 224, 24, 255, 255, 255, 0, 255, 255, 255, 4, 224, 224, 224, 255, 224, 224, 224, 211, 224, 224, 224, 40, 255, 255, 255, 0, 255, 255, 255, 0, 224, 224, 224, 132, 227, 227, 227, 63, 255, 255, 255, 0, 255, 255, 255, 0, 225, 225, 225, 182, 224, 224, 224, 255, 225, 225, 225, 117, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 3, 224, 224, 224, 156, 227, 227, 227, 9, 255, 255, 255, 0, 255, 255, 255, 0, 226, 226, 226, 79, 224, 224, 224, 255, 225, 225, 225, 182, 255, 255, 255, 0, 255, 255, 255, 0, 224, 224, 224, 232, 224, 224, 224, 255, 232, 232, 232, 22, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 227, 227, 227, 36, 224, 224, 224, 255, 224, 224, 224, 234, 255, 255, 255, 0, 255, 255, 255, 0, 224, 224, 224, 235, 224, 224, 224, 255, 224, 224, 224, 33, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 227, 227, 227, 27, 224, 224, 224, 255, 224, 224, 224, 229, 255, 255, 255, 0, 255, 255, 255, 0, 224, 224, 224, 185, 224, 224, 224, 255, 224, 224, 224, 74, 255, 255, 255, 0, 255, 255, 255, 0, 234, 234, 234, 12, 224, 224, 224, 164, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 225, 225, 225, 124, 224, 224, 224, 255, 224, 224, 224, 177, 255, 255, 255, 0, 255, 255, 255, 0, 224, 224, 224, 65, 224, 224, 224, 123, 255, 255, 255, 0, 255, 255, 255, 0, 227, 227, 227, 45, 224, 224, 224, 216, 224, 224, 224, 255, 255, 255, 255, 4, 255, 255, 255, 4, 230, 230, 230, 30, 225, 225, 225, 125, 224, 224, 224, 250, 224, 224, 224, 253, 225, 225, 225, 58, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 225, 225, 225, 100, 224, 224, 224, 246, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 253, 224, 224, 224, 120, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 225, 225, 225, 91, 224, 224, 224, 243, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 252, 224, 224, 224, 252, 224, 224, 224, 226, 225, 225, 225, 175, 224, 224, 224, 57, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 229, 229, 229, 39, 224, 224, 224, 210, 224, 224, 224, 255, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 227, 227, 227, 9, 224, 224, 224, 155, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0),
"format": "RGBA8",
"height": 16,
"mipmaps": false,
"width": 16
}

[sub_resource type="ImageTexture" id="ImageTexture_od44e"]
image = SubResource("Image_rjo17")

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ocdab"]

[sub_resource type="Image" id="Image_ylpac"]
data = {
"data": PackedByteArray(255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 224, 224, 224, 181, 225, 225, 225, 199, 224, 224, 224, 24, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 224, 224, 224, 195, 224, 224, 224, 255, 225, 225, 225, 215, 224, 224, 224, 24, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 231, 231, 231, 21, 224, 224, 224, 210, 224, 224, 224, 255, 225, 225, 225, 215, 224, 224, 224, 24, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 231, 231, 231, 21, 224, 224, 224, 210, 224, 224, 224, 255, 225, 225, 225, 215, 224, 224, 224, 24, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 224, 224, 224, 181, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 201, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 224, 224, 224, 180, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 198, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 231, 231, 231, 21, 224, 224, 224, 211, 224, 224, 224, 255, 224, 224, 224, 212, 232, 232, 232, 22, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 232, 232, 232, 22, 224, 224, 224, 212, 224, 224, 224, 255, 224, 224, 224, 212, 232, 232, 232, 22, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 224, 224, 224, 197, 224, 224, 224, 255, 224, 224, 224, 212, 232, 232, 232, 22, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 224, 224, 224, 178, 224, 224, 224, 196, 232, 232, 232, 22, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0),
"format": "RGBA8",
"height": 16,
"mipmaps": false,
"width": 16
}

[sub_resource type="ImageTexture" id="ImageTexture_ddwpe"]
image = SubResource("Image_ylpac")

[node name="preview_handle" type="MarginContainer"]
anchors_preset = 9
anchor_bottom = 1.0
offset_right = 707.0
grow_vertical = 2
script = ExtResource("1_2u6a4")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer2"]
custom_minimum_size = Vector2(72, 0)
layout_mode = 2
text = "OPERATE_TARGET"
horizontal_alignment = 1

[node name="line" type="MarginContainer" parent="VBoxContainer/HBoxContainer2"]
layout_mode = 2
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 4

[node name="Panel" type="Panel" parent="VBoxContainer/HBoxContainer2/line"]
custom_minimum_size = Vector2(1, 0)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_nyxa8")

[node name="operate_target" type="HBoxContainer" parent="VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2

[node name="CheckBox" type="CheckBox" parent="VBoxContainer/HBoxContainer2/operate_target"]
layout_mode = 2
button_pressed = true
button_group = SubResource("ButtonGroup_naus0")
text = "PREVIEW_IMAGE"

[node name="CheckBox2" type="CheckBox" parent="VBoxContainer/HBoxContainer2/operate_target"]
layout_mode = 2
button_group = SubResource("ButtonGroup_naus0")
text = "SELECTED_PENDING_IMAGE"

[node name="line2" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 4

[node name="Panel" type="Panel" parent="VBoxContainer/line2"]
modulate = Color(0, 0, 0, 0.470588)
custom_minimum_size = Vector2(0, 1)
layout_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="node_container" type="GridContainer" parent="VBoxContainer/ScrollContainer"]
unique_name_in_owner = true
layout_mode = 2
columns = 2

[node name="resize" type="Button" parent="VBoxContainer/ScrollContainer/node_container"]
custom_minimum_size = Vector2(117, 0)
layout_mode = 2
text = "RESIZE"

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/ScrollContainer/node_container"]
layout_mode = 2

[node name="line" type="MarginContainer" parent="VBoxContainer/ScrollContainer/node_container/HBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 4

[node name="Panel" type="Panel" parent="VBoxContainer/ScrollContainer/node_container/HBoxContainer/line"]
custom_minimum_size = Vector2(1, 0)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_nyxa8")

[node name="size" parent="VBoxContainer/ScrollContainer/node_container/HBoxContainer" instance=ExtResource("2_q47wk")]
unique_name_in_owner = true
layout_mode = 2
x_name = "w"
y_name = "h"
allow_greater = true

[node name="rescale" type="Button" parent="VBoxContainer/ScrollContainer/node_container"]
custom_minimum_size = Vector2(117, 0)
layout_mode = 2
text = "RESCALE"

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer/ScrollContainer/node_container"]
layout_mode = 2

[node name="line" type="MarginContainer" parent="VBoxContainer/ScrollContainer/node_container/HBoxContainer2"]
layout_mode = 2
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 4

[node name="Panel" type="Panel" parent="VBoxContainer/ScrollContainer/node_container/HBoxContainer2/line"]
custom_minimum_size = Vector2(1, 0)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_nyxa8")

[node name="scale" parent="VBoxContainer/ScrollContainer/node_container/HBoxContainer2" instance=ExtResource("2_q47wk")]
unique_name_in_owner = true
layout_mode = 2
value = Vector2(1, 1)
step = 0.01
suffix = ""

[node name="cut_btn" type="Button" parent="VBoxContainer/ScrollContainer/node_container"]
custom_minimum_size = Vector2(117, 0)
layout_mode = 2
text = "CUT"

[node name="HBoxContainer5" type="HBoxContainer" parent="VBoxContainer/ScrollContainer/node_container"]
layout_mode = 2

[node name="line" type="MarginContainer" parent="VBoxContainer/ScrollContainer/node_container/HBoxContainer5"]
layout_mode = 2
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 4

[node name="Panel" type="Panel" parent="VBoxContainer/ScrollContainer/node_container/HBoxContainer5/line"]
custom_minimum_size = Vector2(1, 0)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_nyxa8")

[node name="cut" parent="VBoxContainer/ScrollContainer/node_container/HBoxContainer5" instance=ExtResource("3_4s4o5")]
unique_name_in_owner = true
layout_mode = 2
min_value = -100.0
allow_greater = true
allow_lesser = true

[node name="rot" type="Button" parent="VBoxContainer/ScrollContainer/node_container"]
custom_minimum_size = Vector2(117, 0)
layout_mode = 2
text = "ROTATION"

[node name="HBoxContainer6" type="HBoxContainer" parent="VBoxContainer/ScrollContainer/node_container"]
layout_mode = 2

[node name="line" type="MarginContainer" parent="VBoxContainer/ScrollContainer/node_container/HBoxContainer6"]
layout_mode = 2
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 4

[node name="Panel" type="Panel" parent="VBoxContainer/ScrollContainer/node_container/HBoxContainer6/line"]
custom_minimum_size = Vector2(1, 0)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_nyxa8")

[node name="rotation_label" type="Label" parent="VBoxContainer/ScrollContainer/node_container/HBoxContainer6"]
unique_name_in_owner = true
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
text = "0.0"
horizontal_alignment = 1

[node name="rotation" type="HSlider" parent="VBoxContainer/ScrollContainer/node_container/HBoxContainer6"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_vertical = 4
min_value = -180.0
max_value = 180.0
step = 90.0

[node name="recolor" type="Button" parent="VBoxContainer/ScrollContainer/node_container"]
custom_minimum_size = Vector2(117, 0)
layout_mode = 2
text = "ALTER_COLOR"

[node name="HBoxContainer3" type="HBoxContainer" parent="VBoxContainer/ScrollContainer/node_container"]
layout_mode = 2

[node name="line" type="MarginContainer" parent="VBoxContainer/ScrollContainer/node_container/HBoxContainer3"]
layout_mode = 2
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 4

[node name="Panel" type="Panel" parent="VBoxContainer/ScrollContainer/node_container/HBoxContainer3/line"]
custom_minimum_size = Vector2(1, 0)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_nyxa8")

[node name="color_swap" type="Button" parent="VBoxContainer/ScrollContainer/node_container/HBoxContainer3"]
custom_minimum_size = Vector2(32, 0)
layout_mode = 2
tooltip_text = "两个颜色相互切换"
icon = SubResource("ImageTexture_od44e")
icon_alignment = 1

[node name="Control2" type="Control" parent="VBoxContainer/ScrollContainer/node_container/HBoxContainer3"]
custom_minimum_size = Vector2(8, 0)
layout_mode = 2

[node name="from_color" type="ColorPickerButton" parent="VBoxContainer/ScrollContainer/node_container/HBoxContainer3"]
unique_name_in_owner = true
custom_minimum_size = Vector2(32, 0)
layout_mode = 2

[node name="Panel" type="Panel" parent="VBoxContainer/ScrollContainer/node_container/HBoxContainer3"]
custom_minimum_size = Vector2(32, 0)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_ocdab")

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/ScrollContainer/node_container/HBoxContainer3/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
tooltip_text = "从左边颜色转为右边的颜色"
texture = SubResource("ImageTexture_ddwpe")
stretch_mode = 3

[node name="to_color" type="ColorPickerButton" parent="VBoxContainer/ScrollContainer/node_container/HBoxContainer3"]
unique_name_in_owner = true
custom_minimum_size = Vector2(32, 0)
layout_mode = 2
color = Color(1, 1, 1, 1)

[node name="Control3" type="Control" parent="VBoxContainer/ScrollContainer/node_container/HBoxContainer3"]
custom_minimum_size = Vector2(12, 0)
layout_mode = 2

[node name="Label3" type="Label" parent="VBoxContainer/ScrollContainer/node_container/HBoxContainer3"]
custom_minimum_size = Vector2(40, 0)
layout_mode = 2
text = "THRESHOLD"
horizontal_alignment = 2

[node name="Control" type="Control" parent="VBoxContainer/ScrollContainer/node_container/HBoxContainer3"]
custom_minimum_size = Vector2(4, 0)
layout_mode = 2

[node name="color_threshold" type="HSlider" parent="VBoxContainer/ScrollContainer/node_container/HBoxContainer3"]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_vertical = 4
tooltip_text = "颜色判定的阈值，值越大颜色相似度判定成功度越高，颜色越容易被替换掉"
max_value = 1.0
step = 0.01
value = 0.01

[node name="color_threshold_label" type="Label" parent="VBoxContainer/ScrollContainer/node_container/HBoxContainer3"]
unique_name_in_owner = true
modulate = Color(1, 1, 1, 0.498039)
custom_minimum_size = Vector2(40, 0)
layout_mode = 2
text = "0.01"

[node name="outline" type="Button" parent="VBoxContainer/ScrollContainer/node_container"]
custom_minimum_size = Vector2(117, 0)
layout_mode = 2
text = "OUTLINE"

[node name="HBoxContainer4" type="HBoxContainer" parent="VBoxContainer/ScrollContainer/node_container"]
layout_mode = 2

[node name="line" type="MarginContainer" parent="VBoxContainer/ScrollContainer/node_container/HBoxContainer4"]
layout_mode = 2
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 4

[node name="Panel" type="Panel" parent="VBoxContainer/ScrollContainer/node_container/HBoxContainer4/line"]
custom_minimum_size = Vector2(1, 0)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_nyxa8")

[node name="outline_color" type="ColorPickerButton" parent="VBoxContainer/ScrollContainer/node_container/HBoxContainer4"]
unique_name_in_owner = true
custom_minimum_size = Vector2(32, 0)
layout_mode = 2

[node name="mix" type="Button" parent="VBoxContainer/ScrollContainer/node_container"]
custom_minimum_size = Vector2(117, 0)
layout_mode = 2
text = "MIX"

[node name="HBoxContainer7" type="HBoxContainer" parent="VBoxContainer/ScrollContainer/node_container"]
layout_mode = 2

[node name="line" type="MarginContainer" parent="VBoxContainer/ScrollContainer/node_container/HBoxContainer7"]
layout_mode = 2
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 4

[node name="Panel" type="Panel" parent="VBoxContainer/ScrollContainer/node_container/HBoxContainer7/line"]
custom_minimum_size = Vector2(1, 0)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_nyxa8")

[node name="mix_color" type="ColorPickerButton" parent="VBoxContainer/ScrollContainer/node_container/HBoxContainer7"]
unique_name_in_owner = true
custom_minimum_size = Vector2(32, 0)
layout_mode = 2
color = Color(1, 1, 1, 0.498039)

[node name="Control" type="Control" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 4)
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="clear_transparency" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "CLEAR_TRANSPARENCY"

[connection signal="pressed" from="VBoxContainer/ScrollContainer/node_container/resize" to="." method="_on_resize_pressed"]
[connection signal="pressed" from="VBoxContainer/ScrollContainer/node_container/rescale" to="." method="_on_rescale_pressed"]
[connection signal="pressed" from="VBoxContainer/ScrollContainer/node_container/cut_btn" to="." method="_on_cut_btn_pressed"]
[connection signal="pressed" from="VBoxContainer/ScrollContainer/node_container/rot" to="." method="_on_rot_pressed"]
[connection signal="value_changed" from="VBoxContainer/ScrollContainer/node_container/HBoxContainer6/rotation" to="." method="_on_rotation_value_changed"]
[connection signal="pressed" from="VBoxContainer/ScrollContainer/node_container/recolor" to="." method="_on_recolor_pressed"]
[connection signal="pressed" from="VBoxContainer/ScrollContainer/node_container/HBoxContainer3/color_swap" to="." method="_on_color_swap_pressed"]
[connection signal="value_changed" from="VBoxContainer/ScrollContainer/node_container/HBoxContainer3/color_threshold" to="." method="_on_color_threshold_value_changed"]
[connection signal="pressed" from="VBoxContainer/ScrollContainer/node_container/outline" to="." method="_on_outline_pressed"]
[connection signal="pressed" from="VBoxContainer/ScrollContainer/node_container/mix" to="." method="_on_mix_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/clear_transparency" to="." method="_on_clear_transparency_pressed"]
